# git-bisect-tool

./: .gitignore  README.md  git-bisect-tool  pyproject.toml
git_bisect_tool/: __init__.py  __main__.py  bisect.py  cli.py  colors.py  git.py  logging_setup.py  state.py  templates.py
git_bisect_tool/templates/: test-generic.sh  test-llvm.sh
tests/: __init__.py  test_bisect.py  test_cli.py  test_colors.py  test_git.py  test_state.py
